[tool.poetry]
name = "gsm0338"
version = "1.1.0"
description = "GSM 03.38 codec"
readme = "README.rst"
authors = ["David Schneider <schneidav81@gmail.com>"]
license = "MIT"
repository = "https://github.com/dsch/gsm0338"
classifiers = [
    'Development Status :: 5 - Production/Stable',
    'Intended Audience :: Developers',
    'Operating System :: OS Independent',
    'Topic :: Software Development :: Libraries',
]

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
pytest = "^7.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
