[tool.poetry]
name = "gsm0338"
version = "1.2.0"
description = "GSM 03.38 codec"
readme = "README.rst"
authors = ["David Schneider <schneidav81@gmail.com>"]
license = "MIT"
repository = "https://github.com/dsch/gsm0338"
classifiers = [
    'Development Status :: 5 - Production/Stable',
    'Intended Audience :: Developers',
    'Operating System :: OS Independent',
    'Topic :: Software Development :: Libraries',
]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
pre-commit = ">=2.17,<5.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
